...
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
...
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax"
                        app:toolbarImage="@{viewModel.data.bannerBackgroundImage}">
                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/AppTheme.PopupOverlay"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
...
