<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                type="com.example.redfruit.ui.home.viewmodel.HomePostsViewModel"/>
    </data>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            tools:context=".ui.home.fragment.childfragments.SubredditPostsFragment">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/homeSwipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:onRefreshListener="@{() -> viewModel.refreshSub()}"
                app:refreshing="@{viewModel.isLoading}">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPosts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    app:items="@{viewModel.data}"
                    />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </FrameLayout>
</layout>
