...

        </androidx.cardview.widget.CardView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/postTitle"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@{item.title}"
                android:textColor="@color/colorTextTitle"
                app:layout_constraintTop_toBottomOf="@id/postAuthor"
...
